--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@auth0/auth0-spa-js": "^1.13.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@ngrx/effects": "^6.0.1",
@@ -82,14 +82,14 @@
     "stripe": "^6.19.0",
     "time-ago-pipe": "^1.3.2",
     "uuid": "^7.0.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.6",
+    "@angular-devkit/build-angular": "~0.803.29",
     "@angular-devkit/core": "0.7.0-beta.1",
-    "@angular/cli": "^7.3.10",
-    "@angular/compiler-cli": "7.2.16",
-    "@angular/language-service": "7.2.16",
+    "@angular/cli": "^8.3.29",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
     "@types/auth0-js": "^8.11.2",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
@@ -150,11 +150,9 @@
     "tslint-angular": "^3.0.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.16.0",
-    "typescript": "3.1.1",
+    "typescript": "3.5.3",
     "url-loader": "^0.6.2",
     "webpack-cli": "^3.2.1"
   },
-  "peerDependencies": {
-    "@angular/core": "^6.0.0 || ^7.0.0"
-   }
+  "peerDependencies": {}
 }
