--- a/package.json
+++ b/package.json
@@ -38,16 +38,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/animations": "^9.1.13",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
     "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/localize": "9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@auth0/auth0-spa-js": "^1.13.0",
+    "@datadog/browser-rum": "^4.46.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/router-store": "^6.0.1",
@@ -56,7 +58,6 @@
     "@types/file-saver": "^2.0.1",
     "@types/hex-rgb": "^3.0.0",
     "@types/moment-timezone": "^0.5.12",
-    "@datadog/browser-rum": "^4.46.0",
     "@types/stripe": "^6.0.4",
     "@types/url-parse": "^1.4.3",
     "angularjs-slider": "^7.0.0",
@@ -82,14 +83,14 @@
     "stripe": "^6.19.0",
     "time-ago-pipe": "^1.3.2",
     "uuid": "^7.0.2",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular-devkit/core": "0.7.0-beta.1",
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular-devkit/core": "9.1.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "9.1.13",
+    "@angular/language-service": "9.1.13",
     "@types/auth0-js": "^8.11.2",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
@@ -150,7 +151,7 @@
     "tslint-angular": "^3.0.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.16.0",
-    "typescript": "3.5.3",
+    "typescript": "3.8.3",
     "url-loader": "^0.6.2",
     "webpack-cli": "^3.2.1"
   },
