--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,21 +9,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es5",
+    "target": "es2015",
     "strict": true,
     "paths": {
-      "@app/*": [
-        "app/*"
-      ]
+      "@app/*": ["app/*"]
     },
-    "typeRoots": [
-      "node_modules/@types",
-      "node_modules/@types/stripe-v3"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ]
+    "typeRoots": ["node_modules/@types", "node_modules/@types/stripe-v3"],
+    "lib": ["es2017", "dom"]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
