--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@angular/router": "^10.2.5",
     "@auth0/auth0-spa-js": "^1.13.0",
     "@datadog/browser-rum": "^4.46.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "5.3.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/router-store": "^6.0.1",
     "@ngrx/store": "^6.0.1",
