--- a/package.json
+++ b/package.json
@@ -128,7 +128,6 @@
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^7.1.1",
     "nightwatch": "^1.3.4",
-    "node-sass": "^4.13.1",
     "nsp": "^3.2.1",
     "postcss": "^6.0.19",
     "postcss-import": "^11.0.0",
@@ -154,5 +153,6 @@
     "url-loader": "^0.6.2",
     "webpack-cli": "^3.2.1"
   },
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "resolutions": {"webpack": "^5.0.0"}
 }
