--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^7.1.1",
     "nightwatch": "^1.3.4",
+    "node-sass": "4.14.1",
     "nsp": "^3.2.1",
     "postcss": "^6.0.19",
     "postcss-import": "^11.0.0",
@@ -154,5 +155,7 @@
     "webpack-cli": "^3.2.1"
   },
   "peerDependencies": {},
-  "resolutions": {"webpack": "^5.0.0"}
+  "resolutions": {
+    "webpack": "^5.0.0"
+  }
 }
