--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,10 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/robots.txt"],
             "styles": ["src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/"]
+            }
           },
           "configurations": {
             "dev": {
