--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "12.2.17",
     "@angular/language-service": "12.2.17",
+    "@ngrx/schematics": "^18.0.0",
     "@types/auth0-js": "^8.11.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
